@@ -6,10 +6,7 @@
     <UpdateItem>
         <ModuleFolder Value="F:\Program Files (x86)\Steam\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\PeasantRevenge"/>
         <!-- A direct path of your module -->   
-        <ChangeNotes Value="Feature: The mod will allow notable peasant hero to behead the lord when using Diplomacy mod (v1.2.10.0 and newer).
-                     The update will not change already existing PeasantRevengeModCfg.xml values.
-                     If you are using Diplomacy mod already, you should delete PeasantRevengeModCfg.xml or change allowLordToKillMessenger and allowPeasantToKillLord to 'true' by yourself.
-                     Fix: Revenge happening, after notable peasant is persuaded not to revenge, just after criminal hero capture."/>
+        <ChangeNotes Value="Fix: Dublicated revenger parties. Fix: Quest data overwrite in case of not ended revenge. Fix: Possible quest state stuck."/>
         <!-- Insert patch notes -->
         <Tags> 
             <!-- You can use the following tags: -->
